Fix css support on safari
* Resolve #3

--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -3,6 +3,7 @@
 }
 
 .headerButton {
+  height: inherit;
   float: right;
   border: none;
   color: #fff;
